tests/paczka1/small_fuzzy/90895772.err
Error in line 2: SQQq A726 91,2
Error in line 4: JgkwMnabBz A726 36,6
Error in line 7: JgkwMnabBz S826 27,2
